# gritty

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO-liveness.md  USAGE.md  build.rs  config.toml  deny.toml  install.sh  justfile  quicktest.tmux
.config/: nextest.toml
.github/workflows/: ci.yml  nightly.yml  release.yml  security.yml
Formula/: gritty.rb
demo/: forward.tape  persist.tape  record.sh  sessions.tape  transfer.tape
docs/: internals.md  llm-primer.md  tunnel-state-machine.md  wire-protocol.md
docs/demos/: oauth.demo  reconnect.demo  record-all.sh  run-demo.sh
docs/plans/: 2026-02-28-cli-target-syntax-design.md  2026-02-28-cli-target-syntax.md
docs/superpowers/specs/: 2026-03-13-protocol-v9-design.md
src/: alt_screen.rs  client.rs  config.rs  connect.rs  daemon.rs  lib.rs  line_shadow.rs  logging.rs  main.rs  naming.rs  net_watch.rs  procscan.rs  protocol.rs  runinfo.rs  scrollback.rs  security.rs  server.rs  table.rs  ui.rs
src/commands/: doctor.rs  mod.rs  refresh.rs  report.rs  session.rs  transfer.rs  util.rs
tests/: daemon_test.rs  e2e_test.rs  procscan_test.rs  protocol_proptest.rs  protocol_test.rs  socat_bridge_test.rs  socat_tunnel_test.rs  ssh_integration_test.rs
tests/container/: Dockerfile  Dockerfile.demo  features.sh  helpers.sh  lifecycle.sh  run-all.sh  send-receive.sh  session-over-tunnel.sh  ssh-setup.sh  ssh-tunnel.sh
