[package]
name = "gritty-cli"
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
description = "Persistent TTY sessions over Unix domain sockets"
readme = "README.md"
homepage = "https://github.com/chipturner/gritty"
repository = "https://github.com/chipturner/gritty"
keywords = ["terminal", "tty", "ssh", "session", "persistent"]
categories = ["command-line-utilities"]
exclude = [".github/", "CLAUDE.md", "justfile", "quicktest.tmux"]

[lib]
name = "gritty"
path = "src/lib.rs"

[[bin]]
name = "gritty"
path = "src/main.rs"

[dependencies]
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
futures-util = { version = "0.3", features = ["sink"] }
libc = "0.2"
nix = { version = "0.31", features = ["term", "process", "signal", "fs"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
