[package]
name = "gritty-cli"
version = "0.15.2"
edition = "2024"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
description = "Persistent TTY sessions over Unix domain sockets"
readme = "README.md"
homepage = "https://github.com/chipturner/gritty"
repository = "https://github.com/chipturner/gritty"
keywords = ["terminal", "tty", "ssh", "session", "persistent"]
categories = ["command-line-utilities"]
exclude = [".github/", "CLAUDE.md", "justfile", "quicktest.tmux"]

[lib]
name = "gritty"
path = "src/lib.rs"

[[bin]]
name = "gritty"
path = "src/main.rs"

[dependencies]
# Already linked in via clap, so depending on it directly costs no compile time
# and no binary size. Gives per-stream tty detection plus NO_COLOR / CLICOLOR /
# CLICOLOR_FORCE / TERM=dumb handling, and strips ANSI on non-terminal sinks.
anstream = "1"
anyhow = "1"
bytes = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
clap_mangen = "0.3.0"
crossterm = { version = "0.29", default-features = false, features = ["events"] }
directories = "6"
futures-util = { version = "0.3", features = ["sink"] }
getrandom = "0.4"
humansize = "2"
jiff = "0.2"
libc = "0.2"
libproc = "0.14.11"
nix = { version = "0.31", features = ["term", "process", "signal", "fs", "hostname", "user"] }
opener = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
shlex = "2"
tempfile = "3"
terminal_size = "0.4"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
toml = "1.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/gritty-{ target }.tar.gz"
bin-dir = "gritty"
pkg-fmt = "tgz"

[dev-dependencies]
proptest = "1"
tempfile = "3"
